progress: UIVisualizerPanel; feat_end: UIRenderer can now render child windows

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1604,881
+Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
@@ -38,7 +38,7 @@ Collapsed=0
 
 [Window][##toolbar]
 Pos=0,52
-Size=1292,32
+Size=1608,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -200,8 +200,8 @@ Size=387,96
 Collapsed=0
 
 [Window][Window1]
-Pos=822,460
-Size=600,300
+Pos=20,20
+Size=90,82
 Collapsed=0
 
 [Window][Properties]
@@ -220,7 +220,7 @@ Size=32,40
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=107,26
+Pos=941,158
 Size=549,680
 Collapsed=0
 
@@ -311,20 +311,20 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1294,52
-Size=310,829
+Pos=1719,52
+Size=201,1009
 Collapsed=0
-DockId=0x00000011,0
+DockId=0x0000000C,0
 
 [Window][UI Element Picker]
-Pos=-26,166
-Size=223,825
+Pos=0,52
+Size=223,1009
 Collapsed=0
 DockId=0x0000000D,0
 
 [Window][UI Visualizer]
-Pos=199,166
-Size=1073,596
+Pos=0,52
+Size=1717,684
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -337,8 +337,8 @@ IsChild=1
 Size=200,100
 
 [Window][Content Browser]
-Pos=0,592
-Size=1292,289
+Pos=0,738
+Size=1717,323
 Collapsed=0
 DockId=0x00000010,0
 
@@ -346,6 +346,12 @@ DockId=0x00000010,0
 Pos=654,391
 Size=352,106
 Collapsed=0
+
+[Window][UI_VISUALIZER_PANEL_WINDOW]
+Pos=0,52
+Size=1608,718
+Collapsed=0
+DockId=0x0000000F,0
 
 [Table][0xF9AA59E3,4]
 RefScale=18
@@ -477,8 +483,8 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=237,135 Size=1604,829 Split=X Selected=0xBDDC88E0
-  DockNode              ID=0x0000000B Parent=0xF15DEC6E SizeRef=1292,825 Split=X
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=204,240 Size=1920,1009 Split=X Selected=0xBDDC88E0
+  DockNode              ID=0x0000000B Parent=0xF15DEC6E SizeRef=1717,1009 Split=X
     DockNode            ID=0x0000000D Parent=0x0000000B SizeRef=223,825 Selected=0x6D5396E7
     DockNode            ID=0x0000000E Parent=0x0000000B SizeRef=1375,825 Split=X
       DockNode          ID=0x00000009 Parent=0x0000000E SizeRef=1316,825 Split=X
@@ -489,9 +495,9 @@ DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=237,135 Size=1604,82
           DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
           DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
             DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-              DockNode  ID=0x0000000F Parent=0x00000007 SizeRef=1298,504 CentralNode=1 Selected=0xBDDC88E0
-              DockNode  ID=0x00000010 Parent=0x00000007 SizeRef=1298,289 Selected=0xBF096F38
+              DockNode  ID=0x0000000F Parent=0x00000007 SizeRef=1298,680 CentralNode=1 Selected=0xF6FF0623
+              DockNode  ID=0x00000010 Parent=0x00000007 SizeRef=1298,323 Selected=0xBF096F38
             DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
       DockNode          ID=0x0000000A Parent=0x0000000E SizeRef=282,825 Selected=0x26CE0345
-  DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=310,825 Selected=0x2323D3E4
+  DockNode              ID=0x0000000C Parent=0xF15DEC6E SizeRef=201,1009 Selected=0x2323D3E4
 
