feat_end: Canvas with grid in UIVisualizerPanel

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1600,877
+Size=1604,881
 Collapsed=0
 
 [Window][Debug##Default]
@@ -37,8 +37,8 @@ Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=249,52
-Size=1101,32
+Pos=0,52
+Size=1354,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -220,7 +220,7 @@ Size=32,40
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=941,158
+Pos=566,102
 Size=549,680
 Collapsed=0
 
@@ -235,7 +235,7 @@ Size=520,600
 Collapsed=0
 
 [Window][Example: Custom rendering]
-Pos=60,60
+Pos=51,33
 Size=623,474
 Collapsed=0
 
@@ -274,7 +274,7 @@ Collapsed=0
 DockId=0xA086D808,2
 
 [Window][Example: Property editor]
-Pos=60,60
+Pos=193,84
 Size=430,450
 Collapsed=0
 
@@ -311,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1352,52
-Size=248,825
+Pos=1421,52
+Size=183,829
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -323,8 +323,8 @@ Collapsed=0
 DockId=0x0000000D,0
 
 [Window][UI Visualizer]
-Pos=306,52
-Size=819,595
+Pos=0,52
+Size=1419,555
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -337,8 +337,8 @@ IsChild=1
 Size=200,100
 
 [Window][Content Browser]
-Pos=249,540
-Size=1101,337
+Pos=0,609
+Size=1419,272
 Collapsed=0
 DockId=0x00000010,0
 
@@ -65196,6 +65196,17 @@ Collapsed=0
 Size=32,32
 Collapsed=0
 
+[Window][Example: Long text display]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+ViewportPos=179,196
+ViewportId=0x6D551092
+Size=409,894
+Collapsed=0
+
 [Table][0xF9AA59E3,4]
 RefScale=18
 Column 0  Sort=0v
@@ -65326,8 +65337,8 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1600,825 Split=X Selected=0xBDDC88E0
-  DockNode              ID=0x0000000B Parent=0xF15DEC6E SizeRef=1350,1009 Split=X
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=174,159 Size=1604,829 Split=X Selected=0xBDDC88E0
+  DockNode              ID=0x0000000B Parent=0xF15DEC6E SizeRef=1419,1009 Split=X
     DockNode            ID=0x0000000D Parent=0x0000000B SizeRef=304,825 Selected=0x6D5396E7
     DockNode            ID=0x0000000E Parent=0x0000000B SizeRef=819,825 Split=X
       DockNode          ID=0x00000009 Parent=0x0000000E SizeRef=1316,825 Split=X
@@ -65338,9 +65349,9 @@ DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1600,825 S
           DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
           DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
             DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-              DockNode  ID=0x0000000F Parent=0x00000007 SizeRef=1298,452 CentralNode=1 Selected=0xBDDC88E0
-              DockNode  ID=0x00000010 Parent=0x00000007 SizeRef=1298,337 Selected=0xBF096F38
+              DockNode  ID=0x0000000F Parent=0x00000007 SizeRef=1298,555 CentralNode=1 Selected=0xF6FF0623
+              DockNode  ID=0x00000010 Parent=0x00000007 SizeRef=1298,272 Selected=0xBF096F38
             DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
       DockNode          ID=0x0000000A Parent=0x0000000E SizeRef=282,825 Selected=0x26CE0345
-  DockNode              ID=0x0000000C Parent=0xF15DEC6E SizeRef=248,1009 Selected=0x2323D3E4
+  DockNode              ID=0x0000000C Parent=0xF15DEC6E SizeRef=183,1009 Selected=0x2323D3E4
 
