progress: UIVisualizerPanel now displays UI; bug: Weird memory errors in UIPage

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,5 @@
 [Window][DockSpaceWindow]
-Pos=0,0
-Size=1604,881
+Size=1920,1057
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +9,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=247,477
+Size=247,1005
 Collapsed=0
 DockId=0x00000005,0
 
@@ -21,13 +20,13 @@ Size=800,576
 Collapsed=0
 
 [Window][Choose File##ChooseFile]
-Pos=264,157
+Pos=204,97
 Size=1298,482
 Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=249,86
-Size=1101,452
+Size=1486,697
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -37,8 +36,8 @@ Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=0,52
-Size=1354,32
+Pos=249,52
+Size=1486,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -220,7 +219,7 @@ Size=32,40
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=566,102
+Pos=566,103
 Size=549,680
 Collapsed=0
 
@@ -293,8 +292,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,531
-Size=247,346
+Pos=0,635
+Size=247,422
 Collapsed=0
 DockId=0x00000006,0
 
@@ -311,20 +310,20 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1421,52
-Size=183,829
+Pos=1737,52
+Size=183,1005
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][UI Element Picker]
 Pos=0,52
-Size=304,829
+Size=304,1009
 Collapsed=0
 DockId=0x0000000D,0
 
 [Window][UI Visualizer]
 Pos=0,52
-Size=1419,555
+Size=1735,645
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -337,13 +336,13 @@ IsChild=1
 Size=200,100
 
 [Window][Content Browser]
-Pos=0,609
-Size=1419,272
+Pos=0,699
+Size=1735,358
 Collapsed=0
 DockId=0x00000010,0
 
 [Window][Create Entity with MeshComponent]
-Pos=654,391
+Pos=708,386
 Size=352,106
 Collapsed=0
 
@@ -65335,9 +65334,13 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x972AEA84,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=174,159 Size=1604,829 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Pos=0,75 Size=1920,1005 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x0000000B Parent=0xF15DEC6E SizeRef=1419,1009 Split=X
     DockNode            ID=0x0000000D Parent=0x0000000B SizeRef=304,825 Selected=0x6D5396E7
     DockNode            ID=0x0000000E Parent=0x0000000B SizeRef=819,825 Split=X
@@ -65349,8 +65352,8 @@ DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=174,159 Size=1604,82
           DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
           DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
             DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-              DockNode  ID=0x0000000F Parent=0x00000007 SizeRef=1298,555 CentralNode=1 Selected=0xF6FF0623
-              DockNode  ID=0x00000010 Parent=0x00000007 SizeRef=1298,272 Selected=0xBF096F38
+              DockNode  ID=0x0000000F Parent=0x00000007 SizeRef=1298,645 CentralNode=1 Selected=0xF6FF0623
+              DockNode  ID=0x00000010 Parent=0x00000007 SizeRef=1298,358 Selected=0xBF096F38
             DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
       DockNode          ID=0x0000000A Parent=0x0000000E SizeRef=282,825 Selected=0x26CE0345
   DockNode              ID=0x0000000C Parent=0xF15DEC6E SizeRef=183,1009 Selected=0x2323D3E4
