--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,6 @@
 [Window][DockSpaceWindow]
-Size=1920,1057
+Pos=0,0
+Size=1600,877
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=247,1005
+Size=268,477
 Collapsed=0
 DockId=0x00000005,0
 
@@ -25,8 +26,8 @@ Size=1298,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=249,86
-Size=1486,697
+Pos=270,86
+Size=1145,474
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -36,8 +37,8 @@ Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=249,52
-Size=1486,32
+Pos=270,52
+Size=1145,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -292,8 +293,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,635
-Size=247,422
+Pos=0,531
+Size=268,346
 Collapsed=0
 DockId=0x00000006,0
 
@@ -310,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1737,52
-Size=183,1005
+Pos=1417,52
+Size=183,825
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -323,7 +324,7 @@ DockId=0x0000000D,0
 
 [Window][UI Visualizer]
 Pos=0,52
-Size=1735,645
+Size=1419,469
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -336,8 +337,8 @@ IsChild=1
 Size=200,100
 
 [Window][Content Browser]
-Pos=0,699
-Size=1735,358
+Pos=270,562
+Size=1145,315
 Collapsed=0
 DockId=0x00000010,0
 
@@ -65340,20 +65341,20 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Pos=0,75 Size=1920,1005 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1600,825 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x0000000B Parent=0xF15DEC6E SizeRef=1419,1009 Split=X
     DockNode            ID=0x0000000D Parent=0x0000000B SizeRef=304,825 Selected=0x6D5396E7
     DockNode            ID=0x0000000E Parent=0x0000000B SizeRef=819,825 Split=X
       DockNode          ID=0x00000009 Parent=0x0000000E SizeRef=1316,825 Split=X
-        DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=247,829 Split=Y Selected=0x2E9237F7
+        DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=268,829 Split=Y Selected=0x2E9237F7
           DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=276,477 Selected=0x2E9237F7
           DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=276,346 Selected=0xF4B38336
-        DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1043,829 Split=Y
+        DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1145,829 Split=Y
           DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
           DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
             DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-              DockNode  ID=0x0000000F Parent=0x00000007 SizeRef=1298,645 CentralNode=1 Selected=0xF6FF0623
-              DockNode  ID=0x00000010 Parent=0x00000007 SizeRef=1298,358 Selected=0xBF096F38
+              DockNode  ID=0x0000000F Parent=0x00000007 SizeRef=1298,474 CentralNode=1 Selected=0xBDDC88E0
+              DockNode  ID=0x00000010 Parent=0x00000007 SizeRef=1298,315 Selected=0xBF096F38
             DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
       DockNode          ID=0x0000000A Parent=0x0000000E SizeRef=282,825 Selected=0x26CE0345
   DockNode              ID=0x0000000C Parent=0xF15DEC6E SizeRef=183,1009 Selected=0x2323D3E4
