What are we going to do?

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1080
+Size=1604,881
 Collapsed=0
 
 [Window][Debug##Default]
@@ -26,8 +26,8 @@ Size=1298,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=270,86
-Size=1145,474
+Pos=0,86
+Size=1415,569
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -37,8 +37,8 @@ Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=270,52
-Size=1145,32
+Pos=0,52
+Size=1419,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -311,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1737,52
-Size=183,1028
+Pos=1421,52
+Size=183,829
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -337,8 +337,8 @@ IsChild=1
 Size=200,100
 
 [Window][Content Browser]
-Pos=0,860
-Size=1735,220
+Pos=0,661
+Size=1419,220
 Collapsed=0
 DockId=0x00000010,0
 
@@ -65341,7 +65341,7 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=303,78 Size=1920,1028 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=86,161 Size=1604,829 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x0000000B Parent=0xF15DEC6E SizeRef=1419,1009 Split=X
     DockNode            ID=0x0000000D Parent=0x0000000B SizeRef=304,825 Selected=0x6D5396E7
     DockNode            ID=0x0000000E Parent=0x0000000B SizeRef=819,825 Split=X
@@ -65353,7 +65353,7 @@ DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=303,78 Size=1920,102
           DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
           DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
             DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-              DockNode  ID=0x0000000F Parent=0x00000007 SizeRef=1298,438 CentralNode=1 Selected=0xF6FF0623
+              DockNode  ID=0x0000000F Parent=0x00000007 SizeRef=1298,438 CentralNode=1 Selected=0xBDDC88E0
               DockNode  ID=0x00000010 Parent=0x00000007 SizeRef=1298,220 Selected=0xBF096F38
             DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
       DockNode          ID=0x0000000A Parent=0x0000000E SizeRef=282,825 Selected=0x26CE0345
