feat_end-fix: UIVisualizerPanel finally pans elements correctly!

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1604,881
+Size=1920,1057
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=268,477
+Size=268,706
 Collapsed=0
 DockId=0x00000005,0
 
@@ -27,7 +27,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=270,86
-Size=1145,500
+Size=1465,680
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -37,8 +37,8 @@ Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=0,52
-Size=1419,32
+Pos=270,52
+Size=1465,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -293,8 +293,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,531
-Size=268,346
+Pos=0,760
+Size=268,297
 Collapsed=0
 DockId=0x00000006,0
 
@@ -311,20 +311,20 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1421,52
-Size=183,829
+Pos=1737,52
+Size=183,1005
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][UI Element Picker]
 Pos=0,52
-Size=304,660
+Size=304,1009
 Collapsed=0
 DockId=0x0000000D,0
 
 [Window][UI Visualizer]
 Pos=0,52
-Size=1415,534
+Size=1735,714
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -337,8 +337,8 @@ IsChild=1
 Size=200,100
 
 [Window][Content Browser]
-Pos=0,592
-Size=1419,289
+Pos=0,768
+Size=1735,289
 Collapsed=0
 DockId=0x00000010,0
 
@@ -65339,16 +65339,20 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x71559DB9,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=216,291 Size=1604,829 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1920,1005 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x0000000B Parent=0xF15DEC6E SizeRef=1419,1009 Split=X
     DockNode            ID=0x0000000D Parent=0x0000000B SizeRef=304,825 Selected=0x6D5396E7
     DockNode            ID=0x0000000E Parent=0x0000000B SizeRef=819,825 Split=X
       DockNode          ID=0x00000009 Parent=0x0000000E SizeRef=1316,825 Split=X
         DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=268,829 Split=Y Selected=0x2E9237F7
-          DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=276,477 Selected=0x2E9237F7
-          DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=276,346 Selected=0xF4B38336
+          DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=276,706 Selected=0x2E9237F7
+          DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=276,297 Selected=0xF4B38336
         DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1145,829 Split=Y
           DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
           DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
