progress: Drag and drop in UIVisualizerPanel

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1057
+Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
@@ -312,7 +312,7 @@ DockId=0x00000008,0
 
 [Window][Asset Editor]
 Pos=1737,52
-Size=183,1005
+Size=183,1009
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -323,8 +323,8 @@ Collapsed=0
 DockId=0x0000000D,0
 
 [Window][UI Visualizer]
-Pos=0,52
-Size=1735,714
+Pos=306,52
+Size=1429,718
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -337,8 +337,8 @@ IsChild=1
 Size=200,100
 
 [Window][Content Browser]
-Pos=0,768
-Size=1735,289
+Pos=306,772
+Size=1429,289
 Collapsed=0
 DockId=0x00000010,0
 
@@ -65207,6 +65207,11 @@ ViewportId=0x6D551092
 Size=409,894
 Collapsed=0
 
+[Window][Create Image or Button]
+Pos=780,482
+Size=389,116
+Collapsed=0
+
 [Table][0xF9AA59E3,4]
 RefScale=18
 Column 0  Sort=0v
@@ -65345,7 +65350,7 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1920,1005 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=188,117 Size=1920,1009 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x0000000B Parent=0xF15DEC6E SizeRef=1419,1009 Split=X
     DockNode            ID=0x0000000D Parent=0x0000000B SizeRef=304,825 Selected=0x6D5396E7
     DockNode            ID=0x0000000E Parent=0x0000000B SizeRef=819,825 Split=X
