--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1061
+Size=1604,881
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=268,706
+Size=268,829
 Collapsed=0
 DockId=0x00000005,0
 
@@ -27,7 +27,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=270,86
-Size=1465,680
+Size=1334,579
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -38,7 +38,7 @@ Collapsed=0
 
 [Window][##toolbar]
 Pos=270,52
-Size=1465,32
+Size=1334,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -293,8 +293,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,760
-Size=268,297
+Pos=0,633
+Size=268,244
 Collapsed=0
 DockId=0x00000006,0
 
@@ -311,20 +311,20 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1737,52
-Size=183,1009
+Pos=1172,667
+Size=432,214
+Collapsed=0
+DockId=0x0000000E,0
+
+[Window][UI Element Picker]
+Pos=1330,52
+Size=270,825
 Collapsed=0
 DockId=0x0000000C,0
 
-[Window][UI Element Picker]
-Pos=0,52
-Size=304,1009
-Collapsed=0
-DockId=0x0000000D,0
-
 [Window][UI Visualizer]
-Pos=306,52
-Size=1429,718
+Pos=269,52
+Size=1059,609
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -337,10 +337,10 @@ IsChild=1
 Size=200,100
 
 [Window][Content Browser]
-Pos=306,772
-Size=1429,289
+Pos=270,667
+Size=900,214
 Collapsed=0
-DockId=0x00000010,0
+DockId=0x0000000D,0
 
 [Window][Create Entity with MeshComponent]
 Pos=708,386
@@ -65212,6 +65212,12 @@ Pos=780,482
 Size=389,116
 Collapsed=0
 
+[Window][UI Hierarchy]
+Pos=0,52
+Size=267,829
+Collapsed=0
+DockId=0x00000011,0
+
 [Table][0xF9AA59E3,4]
 RefScale=18
 Column 0  Sort=0v
@@ -65348,23 +65354,29 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x153B4B14,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=188,117 Size=1920,1009 Split=X Selected=0xBDDC88E0
-  DockNode              ID=0x0000000B Parent=0xF15DEC6E SizeRef=1419,1009 Split=X
-    DockNode            ID=0x0000000D Parent=0x0000000B SizeRef=304,825 Selected=0x6D5396E7
-    DockNode            ID=0x0000000E Parent=0x0000000B SizeRef=819,825 Split=X
-      DockNode          ID=0x00000009 Parent=0x0000000E SizeRef=1316,825 Split=X
-        DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=268,829 Split=Y Selected=0x2E9237F7
-          DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=276,706 Selected=0x2E9237F7
-          DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=276,297 Selected=0xF4B38336
-        DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1145,829 Split=Y
-          DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
-          DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
-            DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-              DockNode  ID=0x0000000F Parent=0x00000007 SizeRef=1298,500 CentralNode=1 Selected=0xF6FF0623
-              DockNode  ID=0x00000010 Parent=0x00000007 SizeRef=1298,289 Selected=0xBF096F38
-            DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
-      DockNode          ID=0x0000000A Parent=0x0000000E SizeRef=282,825 Selected=0x26CE0345
-  DockNode              ID=0x0000000C Parent=0xF15DEC6E SizeRef=183,1009 Selected=0x2323D3E4
+DockSpace                 ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
+DockSpace                 ID=0xF15DEC6E Window=0x41896AB8 Pos=395,118 Size=1604,829 Split=X Selected=0xBDDC88E0
+  DockNode                ID=0x00000011 Parent=0xF15DEC6E SizeRef=267,829 Selected=0x09C8B3D2
+  DockNode                ID=0x00000012 Parent=0xF15DEC6E SizeRef=1335,829 Split=X
+    DockNode              ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
+      DockNode            ID=0x00000001 Parent=0x00000009 SizeRef=268,829 Split=Y Selected=0x2E9237F7
+        DockNode          ID=0x00000005 Parent=0x00000001 SizeRef=276,706 Selected=0x2E9237F7
+        DockNode          ID=0x00000006 Parent=0x00000001 SizeRef=276,297 Selected=0xF4B38336
+      DockNode            ID=0x00000002 Parent=0x00000009 SizeRef=1145,829 Split=Y
+        DockNode          ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
+        DockNode          ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
+          DockNode        ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=X Selected=0xBDDC88E0
+            DockNode      ID=0x0000000B Parent=0x00000007 SizeRef=1063,534 Split=Y Selected=0xF6FF0623
+              DockNode    ID=0x0000000F Parent=0x0000000B SizeRef=1029,609 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
+              DockNode    ID=0x00000010 Parent=0x0000000B SizeRef=1029,214 Split=X Selected=0x2323D3E4
+                DockNode  ID=0x0000000D Parent=0x00000010 SizeRef=717,264 Selected=0xBF096F38
+                DockNode  ID=0x0000000E Parent=0x00000010 SizeRef=344,264 Selected=0x2323D3E4
+            DockNode      ID=0x0000000C Parent=0x00000007 SizeRef=270,534 Selected=0x6D5396E7
+          DockNode        ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
+    DockNode              ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
