--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,4 @@
 [Window][DockSpaceWindow]
-Pos=0,0
 Size=1604,881
 Collapsed=0
 
@@ -311,8 +310,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1172,667
-Size=432,214
+Pos=1085,667
+Size=519,214
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -337,8 +336,8 @@ IsChild=1
 Size=200,100
 
 [Window][Content Browser]
-Pos=270,667
-Size=900,214
+Pos=0,667
+Size=1083,214
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -65360,7 +65359,7 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace                 ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace                 ID=0xF15DEC6E Window=0x41896AB8 Pos=395,118 Size=1604,829 Split=X Selected=0xBDDC88E0
+DockSpace                 ID=0xF15DEC6E Pos=34,109 Size=1604,829 Split=X Selected=0xBDDC88E0
   DockNode                ID=0x00000011 Parent=0xF15DEC6E SizeRef=267,829 Selected=0x09C8B3D2
   DockNode                ID=0x00000012 Parent=0xF15DEC6E SizeRef=1335,829 Split=X
     DockNode              ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
