codespace: Took UI out of src/, split it into UI/Page and UI/Func; feat_begin: Screen

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,6 @@
 [Window][DockSpaceWindow]
-Size=1604,881
+Pos=0,0
+Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
@@ -310,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1085,667
-Size=519,214
+Pos=1298,775
+Size=622,286
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -323,7 +324,7 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=269,52
-Size=1059,609
+Size=1651,721
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -336,8 +337,8 @@ IsChild=1
 Size=200,100
 
 [Window][Content Browser]
-Pos=0,667
-Size=1083,214
+Pos=0,775
+Size=1296,286
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -65213,7 +65214,7 @@ Collapsed=0
 
 [Window][UI Hierarchy]
 Pos=0,52
-Size=267,829
+Size=267,1009
 Collapsed=0
 DockId=0x00000011,0
 
@@ -65359,7 +65360,7 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace                 ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace                 ID=0xF15DEC6E Pos=34,109 Size=1604,829 Split=X Selected=0xBDDC88E0
+DockSpace                 ID=0xF15DEC6E Window=0x41896AB8 Pos=190,265 Size=1920,1009 Split=X Selected=0xBDDC88E0
   DockNode                ID=0x00000011 Parent=0xF15DEC6E SizeRef=267,829 Selected=0x09C8B3D2
   DockNode                ID=0x00000012 Parent=0xF15DEC6E SizeRef=1335,829 Split=X
     DockNode              ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
@@ -65371,8 +65372,8 @@ DockSpace                 ID=0xF15DEC6E Pos=34,109 Size=1604,829 Split=X Selecte
         DockNode          ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
           DockNode        ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=X Selected=0xBDDC88E0
             DockNode      ID=0x0000000B Parent=0x00000007 SizeRef=1063,534 Split=Y Selected=0xF6FF0623
-              DockNode    ID=0x0000000F Parent=0x0000000B SizeRef=1029,609 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
-              DockNode    ID=0x00000010 Parent=0x0000000B SizeRef=1029,214 Split=X Selected=0x2323D3E4
+              DockNode    ID=0x0000000F Parent=0x0000000B SizeRef=1029,717 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
+              DockNode    ID=0x00000010 Parent=0x0000000B SizeRef=1029,286 Split=X Selected=0x2323D3E4
                 DockNode  ID=0x0000000D Parent=0x00000010 SizeRef=717,264 Selected=0xBF096F38
                 DockNode  ID=0x0000000E Parent=0x00000010 SizeRef=344,264 Selected=0x2323D3E4
             DockNode      ID=0x0000000C Parent=0x00000007 SizeRef=270,534 Selected=0x6D5396E7
