--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1057
+Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=268,1005
+Size=268,706
 Collapsed=0
 DockId=0x00000005,0
 
@@ -311,20 +311,20 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1298,771
-Size=622,286
+Pos=1385,775
+Size=535,286
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][UI Element Picker]
-Pos=1330,52
-Size=270,825
+Pos=1650,52
+Size=270,1009
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=269,52
-Size=1651,717
+Size=1651,721
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -337,8 +337,8 @@ IsChild=1
 Size=200,100
 
 [Window][Content Browser]
-Pos=0,771
-Size=1296,286
+Pos=269,775
+Size=1114,286
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -65214,7 +65214,7 @@ Collapsed=0
 
 [Window][UI Hierarchy]
 Pos=0,52
-Size=267,1005
+Size=267,1009
 Collapsed=0
 DockId=0x00000011,0
 
@@ -65358,9 +65358,13 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x166D15CF,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace                 ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace                 ID=0xF15DEC6E Window=0x41896AB8 Pos=1920,75 Size=1920,1005 Split=X Selected=0xBDDC88E0
+DockSpace                 ID=0xF15DEC6E Window=0x41896AB8 Pos=268,343 Size=1920,1009 Split=X Selected=0xBDDC88E0
   DockNode                ID=0x00000011 Parent=0xF15DEC6E SizeRef=267,829 Selected=0x09C8B3D2
   DockNode                ID=0x00000012 Parent=0xF15DEC6E SizeRef=1335,829 Split=X
     DockNode              ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
