--- a/imgui.ini
+++ b/imgui.ini
@@ -317,14 +317,14 @@ Collapsed=0
 DockId=0x0000000E,0
 
 [Window][UI Element Picker]
-Pos=1650,52
-Size=270,1009
+Pos=0,458
+Size=309,599
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][UI Visualizer]
-Pos=269,52
-Size=1651,721
+Pos=311,52
+Size=1609,721
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -337,8 +337,8 @@ IsChild=1
 Size=200,100
 
 [Window][Content Browser]
-Pos=269,775
-Size=1114,286
+Pos=311,775
+Size=1072,286
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -65214,9 +65214,14 @@ Collapsed=0
 
 [Window][UI Hierarchy]
 Pos=0,52
-Size=267,1009
+Size=309,1009
 Collapsed=0
-DockId=0x00000011,0
+DockId=0x0000000B,0
+
+[Window][Add New UIElement]
+Pos=856,411
+Size=297,128
+Collapsed=0
 
 [Table][0xF9AA59E3,4]
 RefScale=18
@@ -65363,24 +65368,24 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace                 ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace                 ID=0xF15DEC6E Window=0x41896AB8 Pos=268,343 Size=1920,1009 Split=X Selected=0xBDDC88E0
-  DockNode                ID=0x00000011 Parent=0xF15DEC6E SizeRef=267,829 Selected=0x09C8B3D2
-  DockNode                ID=0x00000012 Parent=0xF15DEC6E SizeRef=1335,829 Split=X
-    DockNode              ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
-      DockNode            ID=0x00000001 Parent=0x00000009 SizeRef=268,829 Split=Y Selected=0x2E9237F7
-        DockNode          ID=0x00000005 Parent=0x00000001 SizeRef=276,706 Selected=0x2E9237F7
-        DockNode          ID=0x00000006 Parent=0x00000001 SizeRef=276,297 Selected=0xF4B38336
-      DockNode            ID=0x00000002 Parent=0x00000009 SizeRef=1145,829 Split=Y
-        DockNode          ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
-        DockNode          ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
-          DockNode        ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=X Selected=0xBDDC88E0
-            DockNode      ID=0x0000000B Parent=0x00000007 SizeRef=1063,534 Split=Y Selected=0xF6FF0623
-              DockNode    ID=0x0000000F Parent=0x0000000B SizeRef=1029,717 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
-              DockNode    ID=0x00000010 Parent=0x0000000B SizeRef=1029,286 Split=X Selected=0x2323D3E4
-                DockNode  ID=0x0000000D Parent=0x00000010 SizeRef=717,264 Selected=0xBF096F38
-                DockNode  ID=0x0000000E Parent=0x00000010 SizeRef=344,264 Selected=0x2323D3E4
-            DockNode      ID=0x0000000C Parent=0x00000007 SizeRef=270,534 Selected=0x6D5396E7
-          DockNode        ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
-    DockNode              ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
+DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=216,291 Size=1920,1009 Split=X Selected=0xBDDC88E0
+  DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=309,829 Split=Y Selected=0x09C8B3D2
+    DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
+    DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
+  DockNode              ID=0x00000012 Parent=0xF15DEC6E SizeRef=1609,829 Split=X
+    DockNode            ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
+      DockNode          ID=0x00000001 Parent=0x00000009 SizeRef=268,829 Split=Y Selected=0x2E9237F7
+        DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=276,706 Selected=0x2E9237F7
+        DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=276,297 Selected=0xF4B38336
+      DockNode          ID=0x00000002 Parent=0x00000009 SizeRef=1145,829 Split=Y
+        DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
+        DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
+          DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
+            DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,717 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
+            DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,286 Split=X Selected=0x2323D3E4
+              DockNode  ID=0x0000000D Parent=0x00000010 SizeRef=1072,264 Selected=0xBF096F38
+              DockNode  ID=0x0000000E Parent=0x00000010 SizeRef=535,264 Selected=0x2323D3E4
+          DockNode      ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
+    DockNode            ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
