--- a/imgui.ini
+++ b/imgui.ini
@@ -1,16 +1,15 @@
 [Window][DockSpaceWindow]
-Pos=0,0
-Size=1920,1061
+Size=1604,881
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=35,53
+Pos=81,187
 Size=751,472
 Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=268,706
+Size=268,579
 Collapsed=0
 DockId=0x00000005,0
 
@@ -27,7 +26,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=270,86
-Size=1650,683
+Size=1330,503
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -38,7 +37,7 @@ Collapsed=0
 
 [Window][##toolbar]
 Pos=270,52
-Size=1650,32
+Size=1330,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -53,12 +52,12 @@ Size=429,128
 Collapsed=0
 
 [Window][Lights]
-Pos=441,174
+Pos=373,186
 Size=700,73
 Collapsed=0
 
 [Window][Debug]
-Pos=99,294
+Pos=142,270
 Size=297,412
 Collapsed=0
 
@@ -293,8 +292,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,760
-Size=268,297
+Pos=0,633
+Size=268,244
 Collapsed=0
 DockId=0x00000006,0
 
@@ -311,20 +310,20 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1385,775
-Size=535,286
+Pos=1005,595
+Size=599,286
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][UI Element Picker]
-Pos=0,458
-Size=309,599
+Pos=0,385
+Size=309,492
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=311,52
-Size=1609,721
+Size=1293,541
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -337,8 +336,8 @@ IsChild=1
 Size=200,100
 
 [Window][Content Browser]
-Pos=311,775
-Size=1072,286
+Pos=311,595
+Size=692,286
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -65214,7 +65213,7 @@ Collapsed=0
 
 [Window][UI Hierarchy]
 Pos=0,52
-Size=309,1009
+Size=309,829
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -65369,7 +65368,7 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=216,291 Size=1920,1009 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Pos=86,161 Size=1604,829 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=309,829 Split=Y Selected=0x09C8B3D2
     DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
@@ -65382,10 +65381,10 @@ DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=216,291 Size=1920,10
         DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
         DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
           DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-            DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,717 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
+            DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,717 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
             DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,286 Split=X Selected=0x2323D3E4
-              DockNode  ID=0x0000000D Parent=0x00000010 SizeRef=1072,264 Selected=0xBF096F38
-              DockNode  ID=0x0000000E Parent=0x00000010 SizeRef=535,264 Selected=0x2323D3E4
+              DockNode  ID=0x0000000D Parent=0x00000010 SizeRef=712,264 Selected=0xBF096F38
+              DockNode  ID=0x0000000E Parent=0x00000010 SizeRef=616,264 Selected=0x2323D3E4
           DockNode      ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
     DockNode            ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
