feat_begin: UIElementEditorPanel

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,4 +1,5 @@
 [Window][DockSpaceWindow]
+Pos=0,0
 Size=1604,881
 Collapsed=0
 
@@ -9,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=268,579
+Size=234,829
 Collapsed=0
 DockId=0x00000005,0
 
@@ -20,15 +21,15 @@ Size=800,576
 Collapsed=0
 
 [Window][Choose File##ChooseFile]
-Pos=204,97
-Size=1298,482
+Pos=348,139
+Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=270,86
-Size=1330,503
+Pos=236,86
+Size=1368,545
 Collapsed=0
-DockId=0x0000000F,0
+DockId=0x00000013,0
 
 [Window][##Window]
 Pos=100,100
@@ -36,8 +37,8 @@ Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=270,52
-Size=1330,32
+Pos=236,52
+Size=1368,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -292,8 +293,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,633
-Size=268,244
+Pos=0,478
+Size=234,403
 Collapsed=0
 DockId=0x00000006,0
 
@@ -310,22 +311,22 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1005,595
-Size=599,286
+Pos=1019,633
+Size=585,248
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][UI Element Picker]
-Pos=0,385
-Size=309,492
+Pos=0,387
+Size=227,494
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][UI Visualizer]
-Pos=311,52
-Size=1293,541
+Pos=229,52
+Size=1073,579
 Collapsed=0
-DockId=0x0000000F,0
+DockId=0x00000013,0
 
 [Window][Dear ImGui Demo/ResizableChild_D5443E47]
 IsChild=1
@@ -336,8 +337,8 @@ IsChild=1
 Size=200,100
 
 [Window][Content Browser]
-Pos=311,595
-Size=692,286
+Pos=236,633
+Size=781,248
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -65213,7 +65214,7 @@ Collapsed=0
 
 [Window][UI Hierarchy]
 Pos=0,52
-Size=309,829
+Size=227,829
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -65221,6 +65222,12 @@ DockId=0x0000000B,0
 Pos=856,411
 Size=297,128
 Collapsed=0
+
+[Window][UI Element Editor]
+Pos=1304,52
+Size=300,579
+Collapsed=0
+DockId=0x00000014,0
 
 [Table][0xF9AA59E3,4]
 RefScale=18
@@ -65366,25 +65373,31 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x286C2939,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Pos=86,161 Size=1604,829 Split=X Selected=0xBDDC88E0
-  DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=309,829 Split=Y Selected=0x09C8B3D2
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=60,135 Size=1604,829 Split=X Selected=0xBDDC88E0
+  DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=227,829 Split=Y Selected=0x09C8B3D2
     DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
-  DockNode              ID=0x00000012 Parent=0xF15DEC6E SizeRef=1609,829 Split=X
+  DockNode              ID=0x00000012 Parent=0xF15DEC6E SizeRef=1099,829 Split=X
     DockNode            ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
-      DockNode          ID=0x00000001 Parent=0x00000009 SizeRef=268,829 Split=Y Selected=0x2E9237F7
-        DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=276,706 Selected=0x2E9237F7
-        DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=276,297 Selected=0xF4B38336
-      DockNode          ID=0x00000002 Parent=0x00000009 SizeRef=1145,829 Split=Y
+      DockNode          ID=0x00000001 Parent=0x00000009 SizeRef=234,829 Split=Y Selected=0x2E9237F7
+        DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=276,424 Selected=0x2E9237F7
+        DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=276,403 Selected=0xF4B38336
+      DockNode          ID=0x00000002 Parent=0x00000009 SizeRef=1368,829 Split=Y
         DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
         DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
           DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-            DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,717 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
-            DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,286 Split=X Selected=0x2323D3E4
-              DockNode  ID=0x0000000D Parent=0x00000010 SizeRef=712,264 Selected=0xBF096F38
-              DockNode  ID=0x0000000E Parent=0x00000010 SizeRef=616,264 Selected=0x2323D3E4
+            DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,575 Split=X Selected=0xF6FF0623
+              DockNode  ID=0x00000013 Parent=0x0000000F SizeRef=1073,575 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
+              DockNode  ID=0x00000014 Parent=0x0000000F SizeRef=300,575 Selected=0xFC56E895
+            DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,248 Split=X Selected=0x2323D3E4
+              DockNode  ID=0x0000000D Parent=0x00000010 SizeRef=785,264 Selected=0xBF096F38
+              DockNode  ID=0x0000000E Parent=0x00000010 SizeRef=588,264 Selected=0x2323D3E4
           DockNode      ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
     DockNode            ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
