feat_end: UIVisualizerPanel can select and move UIElement-s and resize Window-s

--- a/imgui.ini
+++ b/imgui.ini
@@ -220,7 +220,7 @@ Size=32,40
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=566,103
+Pos=526,82
 Size=549,680
 Collapsed=0
 
@@ -311,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1019,633
-Size=585,248
+Pos=1016,633
+Size=588,248
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -324,7 +324,7 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=229,52
-Size=1073,579
+Size=1375,579
 Collapsed=0
 DockId=0x00000013,0
 
@@ -337,8 +337,8 @@ IsChild=1
 Size=200,100
 
 [Window][Content Browser]
-Pos=236,633
-Size=781,248
+Pos=229,633
+Size=785,248
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -65219,7 +65219,7 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Add New UIElement]
-Pos=856,411
+Pos=630,376
 Size=297,128
 Collapsed=0
 
@@ -65228,6 +65228,10 @@ Pos=1304,52
 Size=300,579
 Collapsed=0
 DockId=0x00000014,0
+
+[Window][UI Visualizer/Window1_AA32A23C]
+IsChild=1
+Size=412,401
 
 [Table][0xF9AA59E3,4]
 RefScale=18
@@ -65377,9 +65381,13 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x2E6CA592,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=60,135 Size=1604,829 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=164,239 Size=1604,829 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=227,829 Split=Y Selected=0x09C8B3D2
     DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
